# z-vector-search

./: .gitignore  CMakeLists.txt  PLAN.md  README.md  blog-post.md  common_store.h  console.cpp  defaults.h  hybrid_search.h  index.cpp  ingest_console.cpp  main.cpp  msg_filter.h  query.cpp  setup.cpp  store_sqlite.h  z-console-daemon.sh
cmake/: vectorsearchConfig.cmake.in
docs/: index.html  script.js  style.css
ibm-docs/: ibm-messages.db.xz.partac
sample-docs/: cics-db2-mq.txt  iea-iec-misc.txt  iec-messages.txt  ief-messages.txt  security-messages.txt
tools/: pack-db.sh  pdf-to-abendcodes.py  pdf-to-messages.py  setup-ibm-messages.sh  unpack-db.sh
